correct cart icon no longer change size when too small + margin resize in header

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,30 +16,33 @@
   font-style: normal;
 }
 
+.cartImage {
+  align-items: center;
+  display: flex;
+  height: 35px;
+  justify-content: center;
+  position: relative;
+  width: 35px;
+}
 #header{
   align-items: center;
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  width: 100vw;
 }
 .icon{
-  display: flex;
   align-items: center;
-}
-.icon a{
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 35px;
-  width: 35px;
-  position: relative;
+  justify-content: space-around;
 }
 .icon img{
   border: black 3px solid;
   border-radius: 50%;
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 35px;
+  width: 35px;
 }
 .length{
   background: rgb(241, 113, 113);
@@ -58,20 +61,21 @@
   color: rgb(241, 113, 113);
   font-family: 'BallparkWeiner';
   font-size: 2rem;
-  margin-left: 2rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   text-decoration: none;
 }
 .logout{
   color: rgb(241, 113, 113);
   cursor: pointer;
-  margin: 0px 10px 0px 10px;
+  margin: 0px 2px 0px 2px;
 }
 #menuBurger{
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 .sign{
   display: flex;
-  margin: 0px 10px 0px 10px;;
+  margin: 0px 2px 0px 2px;;
 }
 .sign a{
   color: rgb(241, 113, 113);
